defaultjvmargs to ingore guice warnings, change to testImplementation