@@ -13,11 +13,12 @@ repositories {
 }
 
 application {
+    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
     mainClassName = "FitnessApp"
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.hibernate:hibernate-core:5.2.2.Final'
     implementation 'org.hibernate:hibernate-entitymanager:5.2.2.Final'
     implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
